# NLib-Colour

./: pyproject.toml
src/libncolour/: colour.py
tests/: test_1.py
